--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salamah Registration Portal</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
 
 </head>
 
@@ -27,6 +28,7 @@
         <div class="text-right ml-10 ">
                 <span class="text-green-600 text-3xl font-bold">سلامة</span><br>
                 <span class="text-gray-500 text-3xl">Salamah</span>
+                <i class="bi bi-brightness-high-fill" id="toggleDark"></i>
             </div>
         </div>
     </div>
@@ -91,5 +93,4 @@
 
     
 
-    <!--  Navbar -->
      
